[KOGITO-8928] Allow actions in for each to access result of prev one (#2909)
* [KOGITO-8928] Allow actions in for each to access result of prev one

* [KOGITO-8928] Rename output var

* [KOGITO-8928] It is better to use $WORKFLOW

* [KOGITO-8928] Sonar smells

* [KOGITO-8928] Restoring deprecated method
Kogito-8903 breaks backward compatibility and we can easily keep it