@@ -26,6 +26,8 @@ import org.kie.kogito.process.Process;
 import org.kie.kogito.serverless.workflow.actions.WorkflowLogLevel;
 import org.kie.kogito.serverless.workflow.fluent.FunctionBuilder.HttpMethod;
 import org.kie.kogito.serverless.workflow.models.JsonNodeModel;
+import org.kie.kogito.serverless.workflow.utils.ExpressionHandlerUtils;
+import org.kie.kogito.serverless.workflow.utils.KogitoProcessContextResolver;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.TextNode;
@@ -96,10 +98,13 @@ public class StaticFluentWorkflowApplicationTest {
     void testForEach() {
         final String SQUARE = "square";
         try (StaticWorkflowApplication application = StaticWorkflowApplication.create()) {
-            Workflow workflow = workflow("ForEachTest").function(expr(SQUARE, ".input*.input"))
-                    .start(forEach(".numbers").loopVar("input").outputCollection(".result").action(call(SQUARE))).end().build();
-            assertThat(application.execute(workflow, Collections.singletonMap("numbers", Arrays.asList(1, 2, 3, 4))).getWorkflowdata().get("result"))
-                    .isEqualTo(jsonArray().add(1).add(4).add(9).add(16));
+            Workflow workflow = workflow("ForEachTest")
+                    .start(forEach(".numbers").loopVar("input").outputCollection(".result").action(call(expr(SQUARE, ".input*.input")))
+                            .action(call(expr("half", "$" + ExpressionHandlerUtils.CONTEXT_MAGIC + "."
+                                    + KogitoProcessContextResolver.FOR_EACH_PREV_ACTION_RESULT + "/2"))))
+                    .end().build();
+            assertThat(application.execute(workflow, Map.of("numbers", Arrays.asList(2, 4, 6, 8))).getWorkflowdata().get("result"))
+                    .isEqualTo(jsonArray().add(2).add(8).add(18).add(32));
         }
     }
 
